--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,6 +20,7 @@ requirements:
     - {{ stdlib('c') }}
   host:
     - python
+    - python_abi * *_cp{{ python.replace('.', '') }}
     - setuptools
     - numpy
     - scipy
@@ -30,6 +31,7 @@ requirements:
   run:
     - python
     - numba
+    - python_abi * *_cp{{ python.replace('.', '') }}
     - scipy
     - platformdirs
     - toml
