--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
 build:
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --no-binary cyrk
   number: 2
+  skip: true  # [py<39]
 
 requirements:
   build:
@@ -22,6 +23,8 @@ requirements:
     - python
     - setuptools
     - numpy
+    # - numpy <2.0  # [py<313]
+    # - numpy >=2.0  # [py>=313]
     - scipy
     - cython
     - wheel
@@ -32,6 +35,9 @@ requirements:
     - numba
     - scipy
     - platformdirs
+    - numpy
+    # - numpy <2.0  # [py<313]
+    # - numpy >=2.0  # [py>=313]
     - toml
     - dill
     - psutil
