--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,6 +19,10 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ stdlib('c') }}
+    - numpy
+    # - numpy <2.0  # [py<313]
+    # - numpy >=2.0  # [py>=313]
+    - cyrk >=0.13.5,<0.14.0
   host:
     - python
     - setuptools
