--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "TidalPy" %}
-{% set version = "0.6.5" %}
+{% set version = "0.6.6" %}
 
 package:
   name: {{ name|lower }}
@@ -7,25 +7,30 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/tidalpy-{{ version }}.tar.gz
-  sha256: 7cd7a9c2b5cb9ed060903895ddef11f50e9d0125cd6122b4f54a1c653f174873
+  sha256: 779108b480fc91a1d14195bd2669053986fdf9089a7385b098e6e276d7a9dfc2
 
 build:
   script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --no-binary cyrk
-  number: 1
+  number: 0
 
 requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
     - {{ stdlib('c') }}
+    - numpy
+    # - numpy <2.0  # [py<313]
+    # - numpy >=2.0  # [py>=313]
   host:
     - python
     - setuptools
     - numpy
+    # - numpy <2.0  # [py<313]
+    # - numpy >=2.0  # [py>=313]
     - scipy
     - cython
     - wheel
-    - cyrk >=0.13.5
+    - cyrk >=0.15.1,<0.16.0
     - pip
   run:
     - python
@@ -36,7 +41,7 @@ requirements:
     - dill
     - psutil
     - pathos
-    - cyrk >=0.13.5
+    - cyrk >=0.15.1,<0.16.0
     - astropy-base
     - astroquery
     - matplotlib-base
