Update numpy version constraints in meta.yaml

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,13 +20,13 @@ requirements:
     - {{ stdlib('c') }}
     - numpy
     # - numpy <2.0  # [py<313]
-    # - numpy >=2.0  # [py>=313]
+    # - numpy >=2.0,<2.3  # [py>=313]
   host:
     - python
     - setuptools
     - numpy
     # - numpy <2.0  # [py<313]
-    # - numpy >=2.0  # [py>=313]
+    # - numpy >=2.0,<2.3  # [py>=313]
     - scipy
     - cython
     - wheel
